--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    productFlavors {
+
+        paid {
+            applicationId "com.udacity.gradle.builditbigger"
+        }
+        free {
+            applicationId "com.udacity.gradle.builditbigger"
+        }
+    }
 }
 
 dependencies {
@@ -27,7 +36,10 @@ dependencies {
 
     //dependency for android library
     compile project(":displayjoke")
-    compile 'com.android.support:appcompat-v7:23.2.1'
     // Added for AdMob
-    compile 'com.google.android.gms:play-services-ads:8.4.0'
+    compile project(path: ':backend', configuration: 'android-endpoints')
+    compile 'com.android.support:appcompat-v7:24.0.0'
+    compile 'com.google.android.gms:play-services-ads:9.4.0'
+    compile 'com.google.code.findbugs:jsr305:2.0.1'
+    compile 'com.android.support:support-v4:23.4.0'
 }
