added asynTask test , Configuration of task (start server,run test,shut down server)

--- a/build.gradle
+++ b/build.gradle
@@ -15,4 +15,19 @@ allprojects {
     repositories {
         jcenter()
     }
+
+    task connectedCheckTest(type: GradleBuild) {
+        tasks = [":app:connectedCheck"]
+    }
+
+    task server_test_shutDown {
+        dependsOn ":backend:appengineRun"
+        project(":backend").afterEvaluate {
+            backend -> backend.extensions.appengine.daemon = true
+        }
+        doLast {
+            connectedCheckTest.execute()
+        }
+        finalizedBy ":backend:appengineStop"
+    }
 }
