--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,15 +17,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    productFlavors {
 
+    productFlavors {
         paid {
-            applicationId "com.udacity.gradle.builditbigger"
+            applicationId "com.udacity.gradle.builditbigger.paid"
         }
         free {
-            applicationId "com.udacity.gradle.builditbigger"
+            applicationId "com.udacity.gradle.builditbigger.free"
         }
     }
+
 }
 
 dependencies {
@@ -36,10 +37,17 @@ dependencies {
 
     //dependency for android library
     compile project(":displayjoke")
-    // Added for AdMob
+
     compile project(path: ':backend', configuration: 'android-endpoints')
     compile 'com.android.support:appcompat-v7:24.0.0'
-    compile 'com.google.android.gms:play-services-ads:9.4.0'
-    compile 'com.google.code.findbugs:jsr305:2.0.1'
     compile 'com.android.support:support-v4:23.4.0'
+
+    // Added for AdMob for freeVersion
+    freeCompile 'com.google.android.gms:play-services-ads:9.4.0'
+
+    androidTestCompile 'com.android.support:support-annotations:24.0.0'
+    androidTestCompile 'com.android.support.test:runner:0.5'
+    androidTestCompile 'com.android.support.test:rules:0.5'
+
+
 }
